@@ -784,6 +784,48 @@ argument_list|,
 name|startCode
 argument_list|)
 expr_stmt|;
+name|HServerAddress
+name|address
+init|=
+operator|new
+name|HServerAddress
+argument_list|(
+name|serverAddress
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|address
+operator|.
+name|getHostname
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|host
+argument_list|)
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"HBASE-1918 debug : "
+operator|+
+name|address
+operator|.
+name|getHostname
+argument_list|()
+operator|+
+literal|" != "
+operator|+
+name|host
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 return|return
 name|name
